WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199723
Null deref of RenderView under FrameView::setNeedsCompositingConfigurationUpdate
https://bugs.webkit.org/show_bug.cgi?id=199723
Summary
Null deref of RenderView under FrameView::setNeedsCompositingConfigurationUpdate
Tim Horton
Reported
2019-07-11 13:33:13 PDT
Null deref of RenderView under FrameView::setNeedsCompositingConfigurationUpdate
Attachments
Patch
(1.61 KB, patch)
2019-07-11 13:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-07-11 13:33:20 PDT
Created
attachment 373947
[details]
Patch
Tim Horton
Comment 2
2019-07-11 13:33:22 PDT
<
rdar://problem/51554747
>
WebKit Commit Bot
Comment 3
2019-07-11 14:15:33 PDT
Comment on
attachment 373947
[details]
Patch Clearing flags on attachment: 373947 Committed
r247365
: <
https://trac.webkit.org/changeset/247365
>
WebKit Commit Bot
Comment 4
2019-07-11 14:15:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug