Null deref of RenderView under FrameView::setNeedsCompositingConfigurationUpdate https://bugs.webkit.org/show_bug.cgi?id=199723 <rdar://problem/51554747>

Reviewed by Simon Fraser.

* page/FrameView.cpp:
(WebCore::FrameView::setNeedsCompositingConfigurationUpdate):
Add a null-check; it looks like it is possible to get here by dismissing
the find overlay (or other page overlay) at an inopportune time.


Canonical link: https://commits.webkit.org/213600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247365 268f45cc-cd09-0410-ab3c-d52691b4dbfc